@@ -4,7 +4,7 @@
 \alias{getprecip}
 \title{Download rasters of monthly precipitation from internet}
 \source{
-\url{https://www.worldclim.org/data/worldclim21.html}
+\url{https://worldclim.org/data/worldclim21.html}
 }
 \usage{
 getprecip(path = NULL, overwrite = FALSE, verbose = interactive())
@@ -26,7 +26,7 @@ greater than 1.}
 \description{
 The function \code{getprecip} allows for the download of rasters of monthly
 precipitation from internet. It downloads the "precipitation (mm) WorldClim
-Version2" at a spatial resolution of 30 seconds (~1 km2). After download, the
+Version 2.1" at a spatial resolution of 30 seconds (~1 km2). After download, the
 function also unzip the file. The function
 \code{getprecip} uses the generic function \code{downloadfile} that can also be
 used to download directly other files. This raster needs further processing
@@ -34,7 +34,6 @@ with the function \code{\link{prepcipitate}}. It can then be used to predict
 annual averages precipitation weighted isoscapes with the function \code{\link{isomultiscape}}.
 }
 \details{
-precipitation weighted isoscapes
 In the argument "path" is not provided, the file will be stored in the
 current working directory. The functions can create new directories, so you
 can also indicate a new path. The integrity of the elevation raster is tested
